# ProgressiveDIstributedInference

./: .gitignore  README.md  pyproject.toml  requirements-cuda.txt  requirements.txt
configs/: base.yaml  direction_1.yaml  direction_2_base.yaml  stage0_cifar100.yaml  stage1_casia.yaml  stage2_ms1mv2.yaml  variant_a.yaml  variant_b.yaml  variant_c.yaml  variant_d.yaml
docs/: DATA_SETUP.md  DEVELOPER_GUIDE.md  PPI_PROJECT_BOOTSTRAP.md  VARIANT_C_DESIGN.md
notebooks/: analysis.ipynb
scripts/: convert_parquet.py  convert_rec.py  evaluate.py  sweep.py  train.py  train_boosting.py  train_combiner.py
src/ppi/: __init__.py
src/ppi/backbones/: __init__.py  mobilefacenet.py  resnet.py
src/ppi/boosting/: __init__.py  backbone_state.py  cifar100_adaptor.py  combination.py  losses.py  mining.py  trainer.py
src/ppi/combiner/: __init__.py  cache.py  dataset.py  mlp.py  trainer.py
src/ppi/data/: __init__.py  casia.py  cifar100.py  ms1mv2.py
src/ppi/evaluation/: __init__.py  benchmarks.py  boosting_eval.py  combiner_eval.py  evaluator.py  metrics.py
src/ppi/heads/: __init__.py  arcface.py  partition_head.py
src/ppi/losses/: __init__.py  arcface_loss.py  orthogonality.py
src/ppi/partitions/: __init__.py  base.py  combined.py  (+4 more)
tests/: conftest.py  test_arcface_loss.py  test_backbone.py  test_boosting.py  test_config_loading.py  test_data_pipeline.py  test_evaluation.py  test_nested_bn.py  test_orthogonal_residual_strategy.py  test_orthogonality_loss.py  test_partition_assembly.py  test_partition_dropout.py  test_residual_strategy.py  test_training_loop.py
(+6 files in other folders)
