[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ppi"
version = "0.1.0"
description = "Progressive Partitioned Inference for face recognition"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.1",
    "torchvision",
    "timm",
    "onnx",
    "pyyaml",
    "tensorboard",
    "scikit-learn",
    "scipy",
    "numpy",
    "pandas",
    "pillow",
    "albumentations",
]

[project.optional-dependencies]
conversion = ["mxnet"]
wandb = ["wandb"]
dev = ["pytest", "pytest-cov"]

[tool.hatch.build.targets.wheel]
packages = ["src/ppi"]

[tool.pytest.ini_options]
testpaths = ["tests"]
